# trem

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cursor/rules/: workflow.mdc
.github/workflows/: ci.yml
crates/trem/: Cargo.toml
crates/trem-bin/: Cargo.toml
crates/trem-bin/src/: main.rs  rung_playback.rs
crates/trem-bin/src/demo/: README.md  mod.rs  pattern.rs
crates/trem-cpal/: Cargo.toml
crates/trem-cpal/src/: bridge.rs  driver.rs  lib.rs
crates/trem-dsp/: Cargo.toml
crates/trem-dsp/benches/: dsp.rs  graph.rs
crates/trem-dsp/examples/: custom_processor.rs  offline_render.rs  render_to_file.rs
crates/trem-dsp/src/: export.rs  interfaces.rs  lib.rs
crates/trem-dsp/src/standard/: delay.rs  distort.rs  drums.rs  duck.rs  dynamics.rs  env.rs  eq.rs  filter.rs  gain.rs  graphic_eq.rs  lfo.rs  mix.rs  mod.rs  noise.rs  osc.rs  reverb.rs  synth.rs  wavetable.rs
crates/trem-dsp/tests/: render_pattern.rs
crates/trem-mio/: Cargo.toml
crates/trem-mio/examples/: read_planar.rs  roundtrip_memory.rs  save_planar_wav.rs  write_flac.rs
crates/trem-mio/src/: lib.rs  wav.rs
crates/trem-mio/src/audio/: mod.rs
crates/trem-project/: Cargo.toml
crates/trem-project/src/: clip.rs  graph.rs  layout.rs  lib.rs  manifest.rs  package.rs  scene.rs
crates/trem-rta/: Cargo.toml
crates/trem-rta/src/: bridge.rs  cli_output.rs  driver.rs  lib.rs  preview.rs
crates/trem-rung/: Cargo.toml  README.md
crates/trem-rung/src/: beat_time.rs  lib.rs  midi.rs
crates/trem-tui/: Cargo.toml
crates/trem-tui/benches/: spectrum.rs
crates/trem-tui/src/: app.rs  focus.rs  input.rs  lib.rs  project.rs  theme.rs
crates/trem-tui/src/editor/: mod.rs
crates/trem-tui/src/pattern_roll/: convert.rs  editor.rs  mod.rs
crates/trem-tui/src/view/: arrange.rs  context.rs  fullscreen.rs  graph.rs  help.rs  info.rs  mod.rs  overview.rs  pattern.rs  perf.rs  scope.rs  spectrum.rs  status.rs  transport.rs
crates/trem-tui/tests/: keyboard_flows.rs  widget_labels.rs
crates/trem-web/: Cargo.toml
crates/trem-web/src/: lib.rs
crates/trem/benches/: core.rs  dsp.rs  graph.rs
crates/trem/examples/: custom_processor.rs  euclidean_rhythm.rs  extreme_sidechain.rs  graph_audio_gain.rs  graph_prepare_delay.rs  offline_render.rs  xenharmonic.rs
crates/trem/src/: euclidean.rs  event.rs  graph.rs  grid.rs  lib.rs  math.rs  pitch.rs  registry.rs  render.rs  signal.rs  time.rs  tree.rs  wav.rs
crates/trem/src/dsp/: delay.rs  distort.rs  drums.rs  dynamics.rs  env.rs  eq.rs  filter.rs  gain.rs  graphic_eq.rs  lfo.rs  mix.rs  mod.rs  noise.rs  osc.rs  reverb.rs  subgraph.rs  synth.rs  wavetable.rs
crates/trem/src/rung/: midi.rs  mod.rs
demos/: README.md
demos/easybeat/: README.md  trem.toml
demos/easybeat/clips/: bass.json  hat.json  kick.json  lead.json  snare.json
demos/easybeat/graphs/: bass.json  lead.json  main_mix.json
demos/easybeat/scenes/: easybeat.toml
docs/: README.md  design-review-types-dod.md  documentation-and-examples-pass.md  graph-architecture.md  install.md  tui-editor-roadmap.md  tui-testing.md
docs/modes/: README.md  pattern-roll.md  principles.md  zone-mode-tool.md
flow/: README.md
flow/done/: README.md  trem-dsp-crate-split.md
flow/plan/: README.md
flow/prop/: README.md  arrange-timeline-editor.md  ci-msrv-and-semver.md  crates-io-release-strategy.md  deterministic-render-snapshots.md  dsp-simd-audit.md  euclidean-rhythm-ui.md  example-gallery-non-rust-users.md  fuzz-targets-parser-and-rung.md  graph-preset-serialization.md  headless-wav-export-cli.md  mdbook-tutorial-track.md  midi-output-and-clock-sync.md  mixer-bus-tui.md  mouse-scrollbar-polish.md  nested-graph-navigation-ux.md  network-jam-session-sync.md  new-dsp-granular-spectral.md  nix-flake-dev-shell.md  osc-parameter-control.md  piano-roll-editor-model.md  plugin-host-speculative.md  property-based-testing-core.md  rung-pattern-engine-bridge.md  sample-editor-waveform-ui.md  scale-tuning-editor-tui.md  scripting-live-coding-layer.md  tracing-spans-audio-ui.md  trem-dsl.md  tui-accessibility-themes.md  tui-golden-snapshot-tests.md  tui-undo-redo-stack.md  user-facing-errors-and-diagnostics.md  wasm-playground-and-examples.md
flow/todo/: README.md
flow/work/: README.md  minimal-story.md
prop/: piano-roll-editor-model.md
scripts/: README.md  fetch_mutopia_wtc_midi.py  fetch_sankey_wtc_midi.py  fetch_wtc_example_midis.py  generate_placeholder_samples.py  tui-smoke.expect
src/: cli.rs  main.rs  rung_editor.rs  rung_playback.rs
src/demo/: README.md  graph.rs  levels.rs  mod.rs
todo/: README.md
web/: README.md  index.html  package.json  pnpm-lock.yaml
web/src/: App.css  App.tsx  TerminalApp.tsx  routing.ts
work/: README.md
