[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
trem = { path = "crates/trem", version = "0.1.0" }
trem-cpal = { path = "crates/trem-cpal", version = "0.1.0" }
trem-tui = { path = "crates/trem-tui", version = "0.1.0" }
trem-rung = { path = "crates/trem-rung", version = "0.1.0", features = ["midi"] }
ratatui = { version = "0.30", default-features = false }
crossterm = "0.28"
cpal = "0.17"
rtrb = "0.3"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
num-rational = "0.4"
ratzilla = "0.3"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[package]
name = "trem-bin"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "TUI binary for the trem mathematical music engine"
repository = "https://github.com/alkemdev/trem"
readme = "README.md"
documentation = "https://docs.rs/trem-bin"
exclude = [
    "crates/",
    "docs/",
    "prop/",
    "todo/",
    "work/",
    "tests/",
    ".cursor/",
    ".github/",
    "scripts/",
    "AGENTS.md",
    "CONTRIBUTING.md",
]

[[bin]]
name = "trem"
path = "src/main.rs"

[dependencies]
trem = { workspace = true }
trem-cpal = { workspace = true }
trem-tui = { workspace = true }
trem-rung = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
num-rational = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true, default-features = false, features = ["std", "crossterm_0_28"] }
