[workspace]
members = ["crates/*"]
resolver = "2"
default-members = ["crates/trem-bin"]

[workspace.dependencies]
trem = { path = "crates/trem", version = "0.1.0" }
trem-dsp = { path = "crates/trem-dsp", version = "0.1.0" }
trem-rta = { path = "crates/trem-rta", version = "0.1.0" }
trem-tui = { path = "crates/trem-tui", version = "0.1.0" }
trem-mio = { path = "crates/trem-mio", version = "0.1.0" }
trem-project = { path = "crates/trem-project", version = "0.1.0" }
ratatui = "0.30"
crossterm = "0.28"
cpal = "0.17"
rtrb = "0.3"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
num-rational = "0.4"
