[package]
name = "trem-cpal"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Real-time audio backend for trem using cpal"
repository = "https://github.com/alkemdev/trem"
readme = "../../README.md"
documentation = "https://docs.rs/trem-cpal"
keywords = ["audio", "cpal", "realtime"]
categories = ["multimedia::audio"]

[dependencies]
trem = { workspace = true }
cpal = { workspace = true }
rtrb = { workspace = true }
anyhow = { workspace = true }
