[package]
name = "trem-dsp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Standard audio processors for the trem graph — oscillators, effects, drums, and registry wiring"
repository = "https://github.com/alkemdev/trem"
readme = "../../README.md"
documentation = "https://docs.rs/trem-dsp"
keywords = ["audio", "dsp", "synthesizer", "effects", "trem"]
categories = ["multimedia::audio"]

[features]
default = []
# WAV (float) + FLAC (16-bit) via `trem_dsp::export`.
export = ["dep:hound", "dep:flacenc"]

[dependencies]
trem = { path = "../trem", version = "0.1.0" }
hound = { version = "3.5.1", optional = true }
flacenc = { version = "0.5.1", optional = true, default-features = false }

[dev-dependencies]
clap = { workspace = true }
divan = "0.1.21"

[[example]]
name = "render_to_file"
required-features = ["export"]

[[bench]]
name = "dsp"
harness = false

[[bench]]
name = "graph"
harness = false
