[package]
name = "trem-dsp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Standard audio processors for the trem graph — oscillators, effects, drums, and registry wiring"
repository = "https://github.com/alkemdev/trem"
readme = "../../README.md"
documentation = "https://docs.rs/trem-dsp"
keywords = ["audio", "dsp", "synthesizer", "effects", "trem"]
categories = ["multimedia::audio"]

[package.metadata.docs.rs]
all-features = false

[features]
default = []

[dependencies]
trem = { path = "../trem", version = "0.1.0" }

[dev-dependencies]
clap = { workspace = true }
divan = "0.1.21"

[[bench]]
name = "dsp"
harness = false

[[bench]]
name = "graph"
harness = false
