[package]
name = "trem-project"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Portable project/package schema for trem"
repository = "https://github.com/alkemdev/trem"
readme = "../../README.md"
documentation = "https://docs.rs/trem-project"
keywords = ["audio", "music", "project", "package", "trem"]
categories = ["multimedia::audio"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = "1.1.0"
