[package]
name = "trem-tui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Terminal UI for the trem mathematical music engine"
repository = "https://github.com/alkemdev/trem"
readme = "../../README.md"
documentation = "https://docs.rs/trem-tui"
keywords = ["tui", "music", "sequencer", "ratatui"]
categories = ["multimedia::audio", "command-line-interface"]

[dependencies]
trem = { workspace = true, features = ["serde"] }
trem-rung = { workspace = true }
trem-cpal = { workspace = true }
num-rational = { workspace = true }
ratatui = { workspace = true, default-features = false, features = ["std", "all-widgets", "layout-cache"] }
anyhow = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
realfft = "3.5.0"
sysinfo = "0.33"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "spectrum"
harness = false
